--- a/dk-club-subject/pom.xml
+++ b/dk-club-subject/pom.xml
@@ -42,6 +42,13 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
+
     <repositories>
         <repository>
             <id>aliyun</id>
