feat: 引入smart-doc接口文档插件

--- a/dk-club-subject/dk-club-starter/src/main/resources/application-dev.yml
+++ b/dk-club-subject/dk-club-starter/src/main/resources/application-dev.yml
@@ -25,3 +25,10 @@ spring:
         wall:
           enabled: true
 
+# 集成SwaggerUI配置
+springdoc:
+  swagger-ui:
+    path: /swagger-ui-custom.html
+    operations-sorter: method
+    #custom path for api docs
+    url: /smart-doc.json
