--- a/dk-club-subject/pom.xml
+++ b/dk-club-subject/pom.xml
@@ -28,6 +28,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--springboot-->
         <spring-boot.version>3.3.5</spring-boot.version>
+        <springdoc-ui.version>1.8.0</springdoc-ui.version>
     </properties>
 
     <dependencyManagement>
@@ -47,6 +48,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc-ui.version}</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
