--- a/dk-club-subject/dk-club-starter/src/main/resources/application-dev.yml
+++ b/dk-club-subject/dk-club-starter/src/main/resources/application-dev.yml
@@ -32,3 +32,23 @@ springdoc:
     operations-sorter: method
     #custom path for api docs
     url: /smart-doc.json
+
+# MyBatisPlus 设置
+mybatis-plus:
+  mapper-locations: classpath*:com/dk/subject/infra/mapper/xml/*Mapper.xml
+  global-config:
+    db-config:
+      #主键类型  0:"数据库ID自增",1:"该类型为未设置主键类型", 2:"用户输入ID",3:"全局唯一ID (数字类型唯一ID)", 4:"全局唯一ID UUID",5:"字符串全局唯一ID (idWorker 的字符串表示)";
+      id-type: ASSIGN_ID
+      # 默认数据库表下划线命名
+      table-underline: true
+  configuration:
+    # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    # 返回类型为Map,显示null对应的字段
+    call-setters-on-nulls: true
+
+# MyBatis输出sql日志
+logging:
+  level:
+    com.dk.subject.infra.basic.mapper: info
