--- a/dk-club-subject/dk-club-common/pom.xml
+++ b/dk-club-subject/dk-club-common/pom.xml
@@ -17,6 +17,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mysql-version>8.0.33</mysql-version>
         <mybatis-plus>3.5.7</mybatis-plus>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <druid.version>1.2.23</druid.version>
+        <lombok.version>1.18.30</lombok.version>
+        <freemarker.version>2.3.33</freemarker.version>
+        <velocity.version>2.0</velocity.version>
     </properties>
 
     <dependencies>
@@ -35,7 +40,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-3-starter</artifactId>
-            <version>1.2.23</version>
+            <version>${druid.version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -56,12 +61,27 @@
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.33</version>
+            <version>${freemarker.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
-            <version>2.0</version>
+            <version>${velocity.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
         </dependency>
     </dependencies>
 
