feat: 新增MyBatis实体类映射配置

--- a/dk-club-subject/dk-club-starter/src/main/resources/application-dev.yml
+++ b/dk-club-subject/dk-club-starter/src/main/resources/application-dev.yml
@@ -39,7 +39,8 @@ springdoc:
 
 # MyBatisPlus 设置
 mybatis-plus:
-  mapper-locations: classpath*:com/dk/subject/infra/mapper/xml/*Mapper.xml
+  mapper-locations: classpath*:com/dk/subject/infra/basic/mapper/**/*Mapper.xml
+  type-aliases-package: com.dk.subject.infra.basic.entity
   global-config:
     db-config:
       #主键类型  0:"数据库ID自增",1:"该类型为未设置主键类型", 2:"用户输入ID",3:"全局唯一ID (数字类型唯一ID)", 4:"全局唯一ID UUID",5:"字符串全局唯一ID (idWorker 的字符串表示)";
@@ -51,6 +52,8 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     # 返回类型为Map,显示null对应的字段
     call-setters-on-nulls: true
+    # 自动驼峰映射
+    map-underscore-to-camel-case: true
 
 # MyBatis输出sql日志
 logging:
