--- a/dk-club-subject/dk-club-common/pom.xml
+++ b/dk-club-subject/dk-club-common/pom.xml
@@ -24,6 +24,7 @@
         <velocity.version>2.0</velocity.version>
         <fastjson.version>2.0.42</fastjson.version>
         <log4j.version>3.4.1</log4j.version>
+        <guava.version>33.4.0-jre</guava.version>
     </properties>
 
     <dependencies>
@@ -102,6 +103,12 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
