--- a/dk-club-subject/dk-club-starter/src/main/resources/application-dev.yml
+++ b/dk-club-subject/dk-club-starter/src/main/resources/application-dev.yml
@@ -47,6 +47,12 @@ mybatis-plus:
       id-type: ASSIGN_ID
       # 默认数据库表下划线命名
       table-underline: true
+      # 全局逻辑删除字段名
+      logic-delete-field: del_flag
+      # 逻辑已删除值
+      logic-delete-value: 1
+      # 逻辑未删除值
+      logic-not-delete-value: 0
   configuration:
     # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
