feat: pom文件中添加生成jar包配置

--- a/dk-club-subject/pom.xml
+++ b/dk-club-subject/pom.xml
@@ -69,6 +69,16 @@
     </repositories>
 
     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <!-- 自定义 JAR 文件名 -->
+                    <finalName>${project.artifactId}-${project.version}</finalName>
+                </configuration>
+            </plugin>
+        </plugins>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
