--- a/dk-club-subject/pom.xml
+++ b/dk-club-subject/pom.xml
@@ -2,6 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>com.dk</groupId>
+        <artifactId>dk-club</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>com.dk</groupId>
     <version>1.0-SNAPSHOT</version>
@@ -32,131 +37,20 @@
         <springdoc-ui.version>1.8.0</springdoc-ui.version>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
         <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>${springdoc-ui.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
-
-    <repositories>
-        <repository>
-            <id>aliyun</id>
-            <name>aliyun Repository</name>
-            <url>https://maven.aliyun.com/repository/public</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </repository>
-    </repositories>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <!-- 自定义 JAR 文件名 -->
-                    <finalName>${project.artifactId}-${project.version}</finalName>
-                </configuration>
-            </plugin>
-        </plugins>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering> <!-- 开启 Maven 占位符替换 -->
-                <includes>
-                    <include>**/*</include>
-                </includes>
-            </resource>
-            <!-- 添加自定义资源目录 -->
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>com/dk/subject/infra/basic/mapper/xml/**/*.xml</include>
-                </includes>
-            </resource>
-        </resources>
-    </build>
-
-    <!-- 环境 -->
-    <profiles>
-        <!-- 开发 -->
-        <profile>
-            <id>dev</id>
-            <activation>
-                <!--默认激活配置-->
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <!--当前环境-->
-                <profile.name>dev</profile.name>
-                <!--Nacos服务地址-->
-                <config.server-addr>dk-club-nacos:18808</config.server-addr>
-                <!--Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空-->
-                <config.namespace></config.namespace>
-                <!--Nacos配置分组名称-->
-                <config.group>DEFAULT_GROUP</config.group>
-                <!--Nacos用户名-->
-                <config.username></config.username>
-                <!--Nacos密码-->
-                <config.password></config.password>
-            </properties>
-        </profile>
-        <!-- 测试 -->
-        <profile>
-            <id>test</id>
-            <properties>
-                <!--当前环境-->
-                <profile.name>test</profile.name>
-                <!--Nacos服务地址-->
-                <config.server-addr>dk-club-nacos:18088</config.server-addr>
-                <!--Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空-->
-                <config.namespace></config.namespace>
-                <!--Nacos配置分组名称-->
-                <config.group>DEFAULT_GROUP</config.group>
-                <!--Nacos用户名-->
-                <config.username></config.username>
-                <!--Nacos密码-->
-                <config.password></config.password>
-            </properties>
-        </profile>
-        <!-- 生产 -->
-        <profile>
-            <id>prod</id>
-            <properties>
-                <!--当前环境-->
-                <profile.name>prod</profile.name>
-                <!--Nacos服务地址-->
-                <config.server-addr>dk-club-nacos:18808</config.server-addr>
-                <!--Nacos配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空-->
-                <config.namespace></config.namespace>
-                <!--Nacos配置分组名称-->
-                <config.group>DEFAULT_GROUP</config.group>
-                <!--Nacos用户名-->
-                <config.username></config.username>
-                <!--Nacos密码-->
-                <config.password></config.password>
-            </properties>
-        </profile>
-    </profiles>
-
 </project>
