--- a/dk-club-oss/pom.xml
+++ b/dk-club-oss/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>minio</artifactId>
             <version>8.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
