--- a/dk-club-auth/dk-club-auth-application/pom.xml
+++ b/dk-club-auth/dk-club-auth-application/pom.xml
@@ -5,24 +5,29 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.dk</groupId>
-        <artifactId>dk-club</artifactId>
+        <artifactId>dk-club-auth</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>dk-club-auth</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>dk-club-auth-application</module>
-        <module>dk-club-auth-domain</module>
-        <module>dk-club-auth-infra</module>
-        <module>dk-club-auth-starter</module>
-        <module>dk-club-auth-api</module>
-    </modules>
+    <artifactId>dk-club-auth-application</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
 
 </project>
