feat: 新增sa-token相关依赖和配置，并对登录接口进行测试

--- a/dk-club-auth/pom.xml
+++ b/dk-club-auth/pom.xml
@@ -25,4 +25,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <!--这里因为是SpringBoot3，所以需要引入对应3对应依赖，否则启动失败-->
+        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+            <version>1.40.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
