--- a/dk-club-oss/pom.xml
+++ b/dk-club-oss/pom.xml
@@ -17,7 +17,7 @@
         <java.version>17</java.version>
         <nacos.version>0.2.12</nacos.version>
         <cloud.alibaba.version>2023.0.1.2</cloud.alibaba.version>
-        <cloud.bootstrap.version>4.2.0</cloud.bootstrap.version>
+        <cloud.bootstrap.version>4.1.5</cloud.bootstrap.version>
     </properties>
 
     <dependencies>
@@ -51,6 +51,13 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
             <version>${cloud.bootstrap.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-starter-alibaba-nacos-discovery -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <version>${cloud.alibaba.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/io.minio/minio -->
         <dependency>
             <groupId>io.minio</groupId>
