change: 调整鉴权模块打包启动类，修改启动类注释

--- a/dk-club-auth/dk-club-auth-starter/pom.xml
+++ b/dk-club-auth/dk-club-auth-starter/pom.xml
@@ -46,7 +46,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.dk.subject.AuthApplication</mainClass>
+                    <mainClass>com.dk.auth.AuthApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
