feat: OSS模块添加服务发现配置

--- a/dk-club-oss/src/main/resources/bootstrap.yaml
+++ b/dk-club-oss/src/main/resources/bootstrap.yaml
@@ -13,3 +13,6 @@ spring:
         file-extension: yaml
         group: DEFAULT_GROUP
         namespace:
+      discovery:
+        enabled: true
+        server-addr: http://61.171.114.201:8848
