--- a/dk-club-auth/dk-club-auth-starter/src/main/resources/bootstrap.yaml
+++ b/dk-club-auth/dk-club-auth-starter/src/main/resources/bootstrap.yaml
@@ -3,6 +3,28 @@ spring:
     name: dk-club-auth
   profiles:
     active: dev
+  data:
+    redis:
+      # Redis数据库索引（默认为0）
+      database: 1
+      # Redis服务器地址
+      host: 61.171.114.201
+      # Redis服务器连接端口
+      port: 6379
+      # Redis服务器连接密码（默认为空）
+      password: z7Ib0cUooUbQ^p2pTX&6
+      # 连接超时时间
+      timeout: 10s
+      lettuce:
+        pool:
+          # 连接池最大连接数
+          max-active: 200
+          # 连接池最大阻塞等待时间（使用负值表示没有限制）
+          max-wait: -1ms
+          # 连接池中的最大空闲连接
+          max-idle: 10
+          # 连接池中的最小空闲连接
+          min-idle: 0
   cloud:
     bootstrap:
       enabled: true
