feat: 新增用户信息修改接口

--- a/dk-club-auth/dk-club-auth-starter/src/main/resources/application-dev.yml
+++ b/dk-club-auth/dk-club-auth-starter/src/main/resources/application-dev.yml
@@ -65,4 +65,5 @@ mybatis-plus:
 logging:
   config: classpath:log4j2-spring.xml
   level:
+    com.dk.auth.application: info
     com.dk.auth.infra.basic.mapper: info
