--- a/dk-club-auth/dk-club-auth-common/pom.xml
+++ b/dk-club-auth/dk-club-auth-common/pom.xml
@@ -82,6 +82,10 @@
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
