--- a/dk-club-auth/dk-club-auth-starter/src/main/resources/application-dev.yml
+++ b/dk-club-auth/dk-club-auth-starter/src/main/resources/application-dev.yml
@@ -65,5 +65,6 @@ mybatis-plus:
 logging:
   config: classpath:log4j2-spring.xml
   level:
+    root: info
     com.dk.auth.application: info
     com.dk.auth.infra.basic.mapper: info
