--- a/dk-club-subject/pom.xml
+++ b/dk-club-subject/pom.xml
@@ -50,11 +50,11 @@
             <version>${mapstruct.version}</version>
         </dependency>
         <!-- Lombok 编译期处理器 -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok-mapstruct-binding</artifactId>
-            <version>0.2.0</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.projectlombok</groupId>-->
+        <!--    <artifactId>lombok-mapstruct-binding</artifactId>-->
+        <!--    <version>0.2.0</version>-->
+        <!--    <scope>provided</scope>-->
+        <!--</dependency>-->
     </dependencies>
 </project>
